Important changes from 1.6 => 1.6.1
============================================================
Added support for ODK Collect by adding OpenRosa support
Added support for data-mining by enabling the storage of all response data in a separate table with one answer per row
Export data now operates in batch mode, allowing bigger exports and combining spss files in one download
Import is possible for most data screens, though respondent import is the only one tested thoroughly.
New snippet for continuous survey ask-ing with thank you message at the end.
Stand alone surveys can now be appended to existing tracks
Project can customize whether the tokens of shared patient are also shared among organizations (default is no)

Important changes from 1.5.7 => 1.6
============================================================
Patients can now be shared between organizations on the basis of their social security number
No longer Dutch: the default new project is still Dutch, but the basic GemsTracker core is international
New summary and compliance reports
Mail log now shows more information and is better searchable
Tracks can be cloned
Better menu structure
Defined constant GEMS_PROJECT_PATH removed from code (update at least your application.ini and use APPLICATION_PATH instead)
Moved date_default_timezone_set to index.php (can generate warnings)
longDescr in project.ini enables more project specific information on the about pages
New "About GemsTracker" page, implemented as menu item
Support can now be provided through support, manuals, documentation or forum url's.
The global variable $GEMS_DIRS is deprecated, redefine it the application.ini using loaderDirs.Gems = .... (see NewProject)
ZFDebug is now activated in the application.ini using: zfdebug.activate = 1

New project.ini settings:
longDescr   = ""
longDescrNl = "" ; Append language for localised long decription

contact.docsUrl    = "" ; The path to the documentation of the project